--- a/Dockerfile-8drush9
+++ b/Dockerfile-8drush9
@@ -7,6 +7,7 @@ RUN apt-get update && apt-get upgrade -y
 RUN apt-get install -y mysql-client
 RUN apt-get install -y vim
 RUN apt-get install -y git
+RUN apt-get install -y zip
 
 # Get latest version of Drupal, because the official image may
 # be insecure for awhile after security updates.
