--- a/Dockerfile-8drush9
+++ b/Dockerfile-8drush9
@@ -8,7 +8,8 @@ RUN curl -sS https://getcomposer.org/installer | php && \
   mkdir /var/www/latest-drupal && \
   cd /var/www/latest-drupal && \
   composer require drupal/core:~8 && \
-  cp -r /var/www/latest-drupal/vendor/drupal /var/www/html && \
+  cp -r /var/www/latest-drupal/vendor/drupal/* /var/www/html && \
+  cat /var/www/html/core/lib/Drupal.php|grep VERS && \
   cd /var/www/html && composer require drush/drush:~9 && \
   ln -s /var/www/html/vendor/bin/drush /bin/drush
 
