--- a/Dockerfile-8drush9
+++ b/Dockerfile-8drush9
@@ -1,8 +1,18 @@
-FROM dcycle/drupal:8
+FROM drupal:8
 
-RUN cat /var/www/html/core/lib/Drupal.php|grep VERS && \
-  cd /var/www/html && composer require drush/drush:~9 && \
+RUN curl -sS https://getcomposer.org/installer | php && \
+  mv composer.phar /usr/local/bin/composer && \
+  apt-get update && \
+  apt-get install -y --no-install-recommends mysql-client git unzip && \
+  rm -rf /var/lib/apt/lists/*
+
+COPY docker-resources/8drush9/composer.json /var/www/html/composer.json
+
+RUN rm composer.lock && \
+  composer install && \
+  cat /var/www/html/core/lib/Drupal.php|grep VERS && \
   rm /bin/drush && \
-  ln -s /var/www/html/vendor/bin/drush /bin/drush
+  ln -s /var/www/html/vendor/bin/drush /bin/drush && \
+  drush -v
 
 EXPOSE 80
