--- a/docker-resources/8drush/composer.json
+++ b/docker-resources/8drush/composer.json
@@ -17,6 +17,7 @@
     "require": {
         "drush/drush": "~10",
         "composer/installers": "^1.2",
+        "drupal/core-vendor-hardening": "^8.8",
         "drupal/core-composer-scaffold": "^8.8",
         "drupal/core-project-message": "^8.8",
         "drupal/core-recommended": "^8.8"
