--- a/Dockerfile-8drush9
+++ b/Dockerfile-8drush9
@@ -9,6 +9,7 @@ RUN curl -sS https://getcomposer.org/installer | php && \
 COPY docker-resources/8drush9/composer.json /var/www/html/composer.json
 
 RUN rm composer.lock && \
+  export COMPOSER_MEMORY_LIMIT=-1 && \
   composer install && \
   cat /var/www/html/core/lib/Drupal.php|grep VERS && \
   ln -s /var/www/html/vendor/bin/drush /bin/drush && \
