--- a/Dockerfile-8
+++ b/Dockerfile-8
@@ -11,4 +11,6 @@ RUN curl -sS https://getcomposer.org/installer | php && \
   cd /var/www/latest-drupal && drush dl && \
   cp -r /var/www/latest-drupal/drupal-*/* /var/www/html
 
+WORKDIR /var/www/html
+
 EXPOSE 80
