--- a/docker-resources/8drush9/composer.json
+++ b/docker-resources/8drush9/composer.json
@@ -36,7 +36,7 @@
     "extra": {
         "drupal-scaffold": {
             "locations": {
-                "web-root": "./"
+                "web-root": "./web/"
             }
         },
         "installer-paths": {
