--- a/Dockerfile-8drush
+++ b/Dockerfile-8drush
@@ -1,18 +1,24 @@
 FROM drupal:8
 
-RUN curl -sS https://getcomposer.org/installer | php && \
-  mv composer.phar /usr/local/bin/composer && \
-  apt-get update && \
+# See "/var/www/html vs /opt/drupal" in ./README.md
+# This code exists in ./Dockerfile-8, ./Dockerfile-8drush, ./Dockerfile-9
+# Remove the symlink
+RUN rm /var/www/html
+RUN rm -rf /opt/drupal
+RUN mkdir /var/www/html
+RUN chown www-data:www-data /var/www/html
+WORKDIR /var/www/html
+
+RUN apt-get update && \
   apt-get install -y --no-install-recommends mariadb-client git unzip && \
   rm -rf /var/lib/apt/lists/*
 
-COPY docker-resources/8drush/composer.json /opt/drupal/composer.json
+COPY docker-resources/8drush/composer.json /var/www/html/composer.json
 
-RUN rm composer.lock && \
-  export COMPOSER_MEMORY_LIMIT=-1 && \
+RUN export COMPOSER_MEMORY_LIMIT=-1 && \
   composer install && \
   cat /var/www/html/core/lib/Drupal.php|grep VERS && \
-  ln -s /opt/drupal/vendor/bin/drush /bin/drush && \
+  ln -s /var/www/html/vendor/bin/drush /bin/drush && \
   drush -v
 
 EXPOSE 80
