--- a/docker-resources/9/composer.json
+++ b/docker-resources/9/composer.json
@@ -36,7 +36,7 @@
     "extra": {
         "drupal-scaffold": {
             "locations": {
-                "web-root": "./web/"
+                "web-root": "."
             }
         },
         "installer-paths": {
