--- a/Dockerfile-8drush9
+++ b/Dockerfile-8drush9
@@ -1,6 +1,6 @@
 FROM drupal:8
 
-COPY docker-resources/8drush9/composer.json /var/www/html/composer.json
+COPY docker-resources/8drush9/composer.json /composer-file/composer.json
 
 # See "/var/www/html vs /opt/drupal" in ./README.md
 # This code exists in ./Dockerfile-8, ./Dockerfile-8drush, ./Dockerfile-9
@@ -8,6 +8,7 @@ WORKDIR /var/www/html
 RUN rm /var/www/html && \
   rm -rf /opt/drupal && \
   mkdir /var/www/html && \
+  mv /composer-file/composer.json /var/www/html/composer.json && \
   chown www-data:www-data /var/www/html && \
   apt-get update && \
   apt-get install -y --no-install-recommends mariadb-client git unzip && \
