--- a/docker-resources/8/composer.json
+++ b/docker-resources/8/composer.json
@@ -15,15 +15,15 @@
         }
     ],
     "require": {
-        "drush/drush": "dev-master",
+        "drush/drush": "~8",
         "composer/installers": "^1.2",
-        "drupal/core-vendor-hardening": "~9",
-        "drupal/core-composer-scaffold": "~9",
-        "drupal/core-project-message": "~9",
-        "drupal/core-recommended": "~9"
+        "drupal/core-vendor-hardening": "^8.8",
+        "drupal/core-composer-scaffold": "^8.8",
+        "drupal/core-project-message": "^8.8",
+        "drupal/core-recommended": "^8.8"
     },
     "require-dev": {
-        "drupal/core-dev": "~9"
+        "drupal/core-dev": "^8.8"
     },
     "conflict": {
         "drupal/drupal": "*"
