--- a/Dockerfile-9
+++ b/Dockerfile-9
@@ -6,10 +6,7 @@ ENV PATH=$PATH:/root/composer2/vendor/bin:/root/composer1/vendor/bin \
   COMPOSER_HOME=/root/composer2 \
   COMPOSER1_HOME=/root/composer1
 
-COPY docker-resources/9/composer.json /composer-file/composer.json
-COPY docker-resources/9/build.sh /build.sh
-
-RUN /build.sh
+RUN cd /docker-resources/9 && /build.sh && rm -rf /docker-resources
 
 WORKDIR /var/www/html
 
