--- a/Dockerfile-9
+++ b/Dockerfile-9
@@ -7,7 +7,7 @@ ENV PATH=$PATH:/root/composer2/vendor/bin:/root/composer1/vendor/bin \
   COMPOSER1_HOME=/root/composer1
 
 COPY docker-resources /docker-resources
-RUN cd /docker-resources/9 && /build.sh && rm -rf /docker-resources
+RUN cd /docker-resources/9 && ./build.sh && rm -rf /docker-resources
 
 WORKDIR /var/www/html
 
