--- a/Dockerfile-9php8
+++ b/Dockerfile-9php8
@@ -1,9 +1,7 @@
 FROM drupal:9
 
-COPY docker-resources/9php8/composer.json /composer-file/composer.json
-COPY docker-resources/9php8/build.sh /build.sh
-
-RUN /build.sh
+COPY docker-resources /docker-resources
+RUN cd /docker-resources/9php8 && ./build.sh && rm -rf /docker-resources
 
 WORKDIR /var/www/html
 
