--- a/Dockerfile-9
+++ b/Dockerfile-9
@@ -6,8 +6,10 @@ ENV PATH=$PATH:/root/composer2/vendor/bin:/root/composer1/vendor/bin \
   COMPOSER_HOME=/root/composer2 \
   COMPOSER1_HOME=/root/composer1
 
-COPY docker-resources /docker-resources
-RUN cd /docker-resources/9 && ./build.sh && rm -rf /docker-resources
+COPY docker-resources/9/composer.json /composer-file/composer.json
+COPY docker-resources/9/build.sh /build.sh
+
+RUN /build.sh
 
 WORKDIR /var/www/html
 
