--- a/Dockerfile-7
+++ b/Dockerfile-7
@@ -1,5 +1,7 @@
 FROM drupal:7
 
+WORKDIR /var/www/html
+
 COPY docker-resources /docker-resources
 RUN cd /docker-resources/7 && ./build.sh && rm -rf /docker-resources
 
