--- a/docker-resources/9php8-common/composer.json
+++ b/docker-resources/9php8-common/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "drupal/recommended-project",
-    "description": "Project template for Drupal 8 projects with a relocated document root",
+    "description": "Project template for Drupal 9 projects with a relocated document root",
     "type": "project",
     "license": "GPL-2.0-or-later",
     "homepage": "https://www.drupal.org/project/drupal",
@@ -16,14 +16,13 @@
     ],
     "require": {
         "drush/drush": "*",
-        "composer/installers": "^1.2",
-        "drupal/core-vendor-hardening": "~9",
-        "drupal/core-composer-scaffold": "~9",
-        "drupal/core-project-message": "~9",
-        "drupal/core-recommended": "~9"
+        "composer/installers": "^1.9",
+        "drupal/core-composer-scaffold": "^9.1",
+        "drupal/core-project-message": "^9.1",
+        "drupal/core-recommended": "^9.1"
     },
     "require-dev": {
-        "drupal/core-dev": "~9"
+        "drupal/core-dev": "~9.1"
     },
     "conflict": {
         "drupal/drupal": "*"
@@ -31,23 +30,30 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "drush/drush": true,
+            "composer/installers": true,
+            "drupal/*": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     },
     "extra": {
         "drupal-scaffold": {
             "locations": {
-                "web-root": "."
+                "web-root": "/var/www/html"
             }
         },
         "installer-paths": {
-            "./core": ["type:drupal-core"],
-            "./libraries/{$name}": ["type:drupal-library"],
-            "./modules/contrib/{$name}": ["type:drupal-module"],
-            "./profiles/contrib/{$name}": ["type:drupal-profile"],
-            "./themes/contrib/{$name}": ["type:drupal-theme"],
+            "core": ["type:drupal-core"],
+            "libraries/{$name}": ["type:drupal-library"],
+            "modules/contrib/{$name}": ["type:drupal-module"],
+            "profiles/contrib/{$name}": ["type:drupal-profile"],
+            "themes/contrib/{$name}": ["type:drupal-theme"],
             "drush/Commands/contrib/{$name}": ["type:drupal-drush"],
-            "./modules/custom/{$name}": ["type:drupal-custom-module"],
-            "./themes/custom/{$name}": ["type:drupal-custom-theme"]
+            "modules/custom/{$name}": ["type:drupal-custom-module"],
+            "profiles/custom/{$name}": ["type:drupal-custom-profile"],
+            "themes/custom/{$name}": ["type:drupal-custom-theme"]
         },
         "drupal-core-project-message": {
             "include-keys": ["homepage", "support"],
