--- a/Dockerfile-10-fpm-alpine-dev
+++ b/Dockerfile-10-fpm-alpine-dev
@@ -1,4 +1,4 @@
-FROM drupal:10-fpm-alpine
+FROM drupal:10.0-rc-php8.1-fpm-alpine
 
 COPY docker-resources /docker-resources
 RUN apk add --no-cache bash && \
