--- a/docker-resources/10-common/composer.json
+++ b/docker-resources/10-common/composer.json
@@ -35,7 +35,8 @@
             "drush/drush": true,
             "composer/installers": true,
             "drupal/*": true,
-            "dealerdirect/phpcodesniffer-composer-installer": true
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "phpstan/extension-installer": true
         }
     },
     "extra": {
