updated rebuild script

--- a/tests/end-to-end-test/docker-compose.yml
+++ b/tests/end-to-end-test/docker-compose.yml
@@ -3,8 +3,8 @@ version: '3'
 
 services:
   drupal:
-    # An image is necessary to use docker-compose without specifying
-    # files, as in docker-compose exec ...
+    # An image is necessary to use docker compose without specifying
+    # files, as in docker compose exec ...
     image: test-drupal-9php8
     environment:
       MARIADB_ROOT_PASSWORD: ${MARIADB_ROOT_PASSWORD}
