--- a/docker-resources/11-common/composer.json
+++ b/docker-resources/11-common/composer.json
@@ -1,98 +1,98 @@
 {
-  "name": "drupal/recommended-project",
-  "description": "Project template for Drupal projects with a relocated document root",
-  "type": "project",
-  "license": "GPL-2.0-or-later",
-  "homepage": "https://www.drupal.org/project/drupal",
-  "support": {
-      "docs": "https://www.drupal.org/docs/user_guide/en/index.html",
-      "chat": "https://www.drupal.org/node/314178"
-  },
-  "repositories": [
-      {
-          "type": "composer",
-          "url": "https://packages.drupal.org/8"
-      }
-  ],
-  "require": {
-      "drush/drush": "*",    
-      "composer/installers": "^2.0",
-      "drupal/core-composer-scaffold": "^11.0",
-      "drupal/core-project-message": "^11.0",
-      "drupal/core-recommended": "^11.0"
-  },
-  "require-dev": {
-      "drupal/core-dev": "~11"
-  },
-  "conflict": {
-      "drupal/drupal": "*"
-  },
-  "minimum-stability": "dev",
-  "prefer-stable": true,
-  "config": {
-      "allow-plugins": {
-          "drush/drush": true,        
-          "composer/installers": true,
-          "drupal/*": true,
-          "drupal/core-composer-scaffold": true,
-          "drupal/core-project-message": true,
-          "phpstan/extension-installer": true,
-          "dealerdirect/phpcodesniffer-composer-installer": true,
-          "php-http/discovery": true
-      },
-      "sort-packages": true
-  },
-  "extra": {
-      "drupal-scaffold": {
-          "locations": {
-              "web-root": "/var/www/html"
-          }
-      },
-      "installer-paths": {
-          "core": [
-            "type:drupal-core"
-          ],
-          "libraries/{$name}": [
-              "type:drupal-library"
-          ],
-          "modules/contrib/{$name}": [
-              "type:drupal-module"
-          ],
-          "profiles/contrib/{$name}": [
-              "type:drupal-profile"
-          ],
-          "themes/contrib/{$name}": [
-              "type:drupal-theme"
-          ],
-          "drush/Commands/contrib/{$name}": [
-              "type:drupal-drush"
-          ],
-          "modules/custom/{$name}": [
-              "type:drupal-custom-module"
-          ],
-          "profiles/custom/{$name}": [
-              "type:drupal-custom-profile"
-          ],
-          "themes/custom/{$name}": [
-              "type:drupal-custom-theme"
-          ]
-      },
-      "drupal-core-project-message": {
-          "include-keys": [
-              "homepage",
-              "support"
-          ],
-          "post-create-project-cmd-message": [
-              "<bg=blue;fg=white>                                                         </>",
-              "<bg=blue;fg=white>  Congratulations, you’ve installed the Drupal codebase  </>",
-              "<bg=blue;fg=white>  from the drupal/recommended-project template!          </>",
-              "<bg=blue;fg=white>                                                         </>",
-              "",
-              "<bg=yellow;fg=black>Next steps</>:",
-              "  * Install the site: https://www.drupal.org/docs/installing-drupal",
-              "  * Read the user guide: https://www.drupal.org/docs/user_guide/en/index.html",
-              "  * Get support: https://www.drupal.org/support",
-              "  * Get involved with the Drupal community:",
+    "name": "drupal/recommended-project",
+    "description": "Project template for Drupal projects with a relocated document root",
+    "type": "project",
+    "license": "GPL-2.0-or-later",
+    "homepage": "https://www.drupal.org/project/drupal",
+    "support": {
+        "docs": "https://www.drupal.org/docs/user_guide/en/index.html",
+        "chat": "https://www.drupal.org/node/314178"
+    },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://packages.drupal.org/8"
+        }
+    ],
+    "require": {
+        "composer/installers": "^2.0",
+        "drupal/core-composer-scaffold": "^11",
+        "drupal/core-project-message": "^11",
+        "drupal/core-recommended": "^11",
+        "drush/drush": "*"
+    },
+    "require-dev": {
+        "drupal/core-dev": "~11"
+    },    
+    "conflict": {
+        "drupal/drupal": "*"
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "config": {
+        "allow-plugins": {
+            "composer/installers": true,
+            "drupal/core-composer-scaffold": true,
+            "drupal/core-project-message": true,
+            "phpstan/extension-installer": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "drupal/*": true,
+            "drush/drush": true,
+            "php-http/discovery": true
+        },
+        "sort-packages": true
+    },
+    "extra": {
+        "drupal-scaffold": {
+            "locations": {
+                "web-root": "/var/www/html"
+            }
+        },
+        "installer-paths": {
+            "core": [
+                "type:drupal-core"
+            ],
+            "libraries/{$name}": [
+                "type:drupal-library"
+            ],
+            "modules/contrib/{$name}": [
+                "type:drupal-module"
+            ],
+            "profiles/contrib/{$name}": [
+                "type:drupal-profile"
+            ],
+            "themes/contrib/{$name}": [
+                "type:drupal-theme"
+            ],
+            "drush/Commands/contrib/{$name}": [
+                "type:drupal-drush"
+            ],
+            "modules/custom/{$name}": [
+                "type:drupal-custom-module"
+            ],
+            "profiles/custom/{$name}": [
+                "type:drupal-custom-profile"
+            ],
+            "themes/custom/{$name}": [
+                "type:drupal-custom-theme"
+            ]
+        },
+        "drupal-core-project-message": {
+            "include-keys": [
+                "homepage",
+                "support"
+            ],
+            "post-create-project-cmd-message": [
+                "<bg=blue;fg=white>                                                         </>",
+                "<bg=blue;fg=white>  Congratulations, you’ve installed the Drupal codebase  </>",
+                "<bg=blue;fg=white>  from the drupal/recommended-project template!          </>",
+                "<bg=blue;fg=white>                                                         </>",
+                "",
+                "<bg=yellow;fg=black>Next steps</>:",
+                "  * Install the site: https://www.drupal.org/docs/installing-drupal",
+                "  * Read the user guide: https://www.drupal.org/docs/user_guide/en/index.html",
+                "  * Get support: https://www.drupal.org/support",
+                "  * Get involved with the Drupal community:",
                 "      https://www.drupal.org/getting-involved",
                 "  * Remove the plugin that prints this message:",
                 "      composer remove drupal/core-project-message"
